Fixed MULE-5410. Added nowrap attribute to menu item containers.
git-svn-id: https://svn.codehaus.org/mule/branches/mule-3.1.x@21253 bf997673-6b11-0410-b953-e057580c5b09

--- a/examples/mule-example-launcher/src/main/app/docroot/css/style.css
+++ b/examples/mule-example-launcher/src/main/app/docroot/css/style.css
@@ -275,7 +275,8 @@ color:#333; font-size:14px; float:left; font-weight:normal;
 .left-nav .demos-nav ul, 
 .left-nav .demos-nav li {
 	margin: 0;
-	padding: 0
+	padding: 0;
+	white-space: nowrap;
 }
 
 .left-nav .demos-nav {
